--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/*there is some inline style*/
+
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+/*Style Cover*/
 .cover{
 	background-image: url('cover.jpg');
 	opacity: 0.8;
@@ -6,20 +10,40 @@
 	background-size: cover;
     background-repeat: no-repeat;
     margin-bottom: 50px;
-}
-.cover>div{
-	position: absolute;
-	top: 50%;
-	width: 50%;
-	left: 20%;
-	opacity: 1;
+	font-family: 'Indie Flower', cursive;
 }
 
+.cover>div{
+	margin:0 auto;
+	opacity: 1;
+}
+.title{
+	color:white;
+}
+.cover button{
+	height: 48px;
+	font-size: 1.2em;
+}
+.or{
+	color:white;
+	font-size:3em;
+	line-height: 50px;
+	text-align:center;
+	font-weight:bold
+}
+.input-group{
+	width:80%;
+	margin: 0 auto;
+	text-align: right;
+}
 .form-control{
 	height: 50px;
 	font-size: 1.5em;
 	color: black;
+	
 }
+/*End of Style Cover*/
+/*Style Images*/
 .thumbnail{
   transition: all .2s ease-in-out;
 }
@@ -29,4 +53,49 @@
 }
 .fa-star{
 	color:orange;
+}
+
+/*media*/
+
+@media screen and (min-width: 768px) {
+	.inputGroup{
+		position: relative;
+		top:20%;
+		width: 100%
+	}
+	.input-group{
+		position: absolute;
+		right: 20px
+	}
+	.inputGroup button{
+		position: absolute;
+	}
+	.title{
+		font-size: 3.5em;
+		padding-top: 70px;
+		padding-left: 10%;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.cover{
+		text-align: center;
+	}
+	.input-group{
+		width: 142.45px;
+		padding-top: 20px
+	}
+	.title{
+		font-size: 3em;
+		padding-top: 80px
+	}
+	.or{
+		font-size: 2em
+	}
+}
+@media screen and (max-width: 564px){
+	.title{
+		font-size: 2em;
+	}
+
 }
