--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,6 @@
 	height: 50px;
 	font-size: 1.5em;
 	color: black;
-	
 }
 /*End of Style Cover*/
 /*Style Images*/
@@ -49,12 +48,30 @@
 }
 .thumbnail:hover{
   transform: scale(1.1);
-  cursor: pointer;
 }
 .fa-star{
 	color:orange;
 }
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
+}
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
 
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 /*media*/
 
 @media screen and (min-width: 768px) {
